[#303] fixed padding and vertical alignment within mobile view

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -127,11 +127,3 @@ $lg: 64em; //desktop and up (1024px)
   transition: top 500ms ease-in;
   z-index: 300;
 }
-
-.scrolled-padding-2rem {
-  padding-top: 2rem !important;
-}
-
-.scrolled-padding-3rem {
-  padding-top: 3rem !important;
-}
