--- a/web/styles/njwds-overrides/overrides.scss
+++ b/web/styles/njwds-overrides/overrides.scss
@@ -45,16 +45,6 @@ hr {
   }
 }
 
-.usa-section {
-  padding-top: 0 !important;
-}
-
-@media all and (min-width: $lg) {
-  .usa-section {
-    padding-top: 4rem !important;
-  }
-}
-
 .minw-30 {
   min-width: 30rem;
 }
